<resources>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">Select your music!</string>
    <string name="second_fragment_label">Back</string>
    <string name="next">---)</string>
    <string name="previous">(---</string>

    <string-array name="list_music">Empty</string-array>

    <string name="hello_first_fragment">Your list of musics</string>

    <string name="previousbtn">previousBtn</string>
    <string name="nextbtn">nextBtn</string>
    <string name="play_pausebtn">play_pauseBtn</string>
    <string name="music_s_title">Music\'s Title!</string>
    <string name="menuoptions">MenuOptions</string>
    <string name="album_image">Album Image</string>
    <string name="repeat">Repeat</string>
    <string name="_0_00_10_00">0:00 / 10:00</string>
</resources>