<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MusicPlayerFragment"
    android:tag="musicPlayTag"
    android:id="@+id/musicPlay">

    <ImageButton
        android:id="@+id/backBtnImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="25dp"
        android:background="@color/purple_700"
        android:src="@android:drawable/ic_media_rew"
        android:contentDescription="@string/previousbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/nextBtnImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:background="@color/purple_700"
        android:src="@android:drawable/ic_media_ff"
        android:contentDescription="@string/nextbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"  />

    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/play_button"
        android:contentDescription="@string/play_pausebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth="100dp" />

    <TextView
        android:id="@+id/titleMusicTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_s_title"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/menuBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/menuBar"
        android:layout_width="413dp"
        android:layout_height="109dp"
        android:layout_marginTop="-40dp"
        android:src="@android:drawable/bottom_bar"
        android:contentDescription="@string/menuoptions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/albumSongImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/temp_bg"
        android:layout_gravity="center"
        android:contentDescription="@string/album_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/menuBar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/repeatSwitchCompat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:text="@string/repeat"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/Duration_SseekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/timeMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="136dp"
        android:gravity="center"
        android:text="@string/_0_00_10_00"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuBar"
        app:layout_constraintVertical_bias="0.716" />

</androidx.constraintlayout.widget.ConstraintLayout>